<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="mediateka">Медиатека</string>
    <string name="find">Поиск</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agrement">Пользовательское соглашение</string>
    <string name="shared_text">https://practicum.yandex.ru/</string>
    <string name="my_mail">vlad@gmail.com</string>
    <string name="my_app_share_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_app_share_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicun_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="problems_with_connection">Проблемы со связью</string>
    <string name="on_failure">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>

</resources>