<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/settings_cl_style"
    tools:context=".SearchActivity">

    <ImageButton style="@style/settings_arrow"
        android:id="@+id/buttonBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        style="@style/settings_tv_style"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/buttons_margin"
        android:gravity="center"
        android:text="@string/find"
        android:textSize="@dimen/playlist_maker_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/settings_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                style="@style/search_et"
                android:id="@+id/editText"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="10"
                android:background="@color/invisible"
                android:drawableStart="@drawable/find"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:hint="@string/find"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="48dp"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <ImageView style="@style/search_clear"
                android:id="@+id/clear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/clear"
                android:visibility="invisible" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/track_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView style="@style/not_fond_style"
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="210dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFailure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView style="@style/failure_style"
            android:id="@+id/imageView3"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="210dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problems_with_connection"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView3"
            style="@style/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/on_failure"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatButton style="@style/btn_update"
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_update"
            android:paddingHorizontal="10dp"
            android:text="@string/update"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>